--- a/application/index.html
+++ b/application/index.html
@@ -9,6 +9,8 @@
 
         <script type="text/javascript" src="scripts/vendor/jquery.1.8.2.js"></script>
         <script type="text/javascript" src="scripts/vendor/raphael.2.1.0.js"></script>
+        <script type="text/javascript" src="scripts/vendor/lodash.0.7.0.js"></script>
+        <script type="text/javascript" src="scripts/vendor/backbone.0.9.2.js"></script>
 
         <script type="text/javascript" src="scripts/javascript/main.js"></script>
 
