breaking files up, setting mv* up a little more

--- a/application/index.html
+++ b/application/index.html
@@ -12,6 +12,10 @@
         <script type="text/javascript" src="scripts/vendor/lodash.0.7.0.js"></script>
         <script type="text/javascript" src="scripts/vendor/backbone.0.9.2.js"></script>
 
+        <script type="text/javascript" src="scripts/javascript/config.js"></script>
+        <script type="text/javascript" src="scripts/javascript/model/models.js"></script>
+        <script type="text/javascript" src="scripts/javascript/view/views.js"></script>
+
         <script type="text/javascript" src="scripts/javascript/main.js"></script>
 
     </body>
