--- a/application/index.html
+++ b/application/index.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="scripts/vendor/backbone.0.9.2.js"></script>
 
         <script type="text/javascript" src="scripts/javascript/config.js"></script>
+        <script type="text/javascript" src="scripts/javascript/mediator/mediator.js"></script>
         <script type="text/javascript" src="scripts/javascript/model/models.js"></script>
         <script type="text/javascript" src="scripts/javascript/view/views.js"></script>
 
