--- a/application/index.html
+++ b/application/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div id="medium"></div>
+        <div id="info"></div>
 
         <script type="text/javascript" src="scripts/vendor/jquery.1.8.2.js"></script>
         <script type="text/javascript" src="scripts/vendor/raphael.2.1.0.js"></script>
