--- a/application/index.html
+++ b/application/index.html
@@ -3,10 +3,43 @@
     <head>
         <meta charset="utf-8">
         <title>Bacterial Battle</title>
+        <link href="css/bootstrap.css" rel="stylesheet">
     </head>
     <body>
-        <div id="medium"></div>
-        <div id="info"></div>
+        <div class="container">
+            <div class="well">
+                <h1>Bacterial Battle</h1>
+
+            </div>
+            <div id="medium"></div>
+            <div class="well">
+                <div id="info"></div>
+            </div>
+
+            <footer class="credit row">
+                <div class="span2">
+                    <a href="https://github.com/pajtai/">Bacterial Battle</a>
+                </div>
+                <div class="span10">
+                    <a>
+                        <img width="25" height="25" alt="Peter Ajtai" src="https://secure.gravatar.com/avatar/ac74a00c500add86f36e2b3ed2900805?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
+                        Peter Ajtai
+                    </a>
+                </div>
+                <div class="span2">
+                    <a href="https://github.com/pajtai/">&copy 2012 </a>
+                </div>
+                <div class="span10">
+                    <a href="https://raw.github.com/pajtai/Bacterial-Battle/master/MIT-LICENSE.txt">
+                        MIT License
+                    </a>
+                </div>
+
+            </footer>
+        </div>
+
+
+
 
         <script type="text/javascript" src="scripts/vendor/jquery.1.8.2.js"></script>
         <script type="text/javascript" src="scripts/vendor/raphael.2.1.0.js"></script>
