--- a/application/index.html
+++ b/application/index.html
@@ -18,10 +18,10 @@
 
             <footer class="credit row">
                 <div class="span2">
-                    <a href="https://github.com/pajtai/">Bacterial Battle</a>
+                    <a href="https://github.com/pajtai/bacterial-battle">Bacterial Battle</a>
                 </div>
                 <div class="span10">
-                    <a>
+                    <a href="https://github.com/pajtai/">
                         <img width="25" height="25" alt="Peter Ajtai" src="https://secure.gravatar.com/avatar/ac74a00c500add86f36e2b3ed2900805?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
                         Peter Ajtai
                     </a>
