--- a/application/index.html
+++ b/application/index.html
@@ -39,8 +39,7 @@
         </div>
 
 
-
-
+        <!-- build:js scripts/bacterial-battle.js -->
         <script type="text/javascript" src="scripts/vendor/jquery.1.8.2.js"></script>
         <script type="text/javascript" src="scripts/vendor/raphael.2.1.0.js"></script>
         <script type="text/javascript" src="scripts/vendor/lodash.0.7.0.js"></script>
@@ -52,6 +51,7 @@
         <script type="text/javascript" src="scripts/javascript/view/views.js"></script>
 
         <script type="text/javascript" src="scripts/javascript/main.js"></script>
+        <!-- endbuild -->
 
     </body>
 </html>
