even more grunt task tweaks, making sure to check in frequently, cause clean once wiped out my entire directory including .git

--- a/targets/live/index.html
+++ b/targets/live/index.html
@@ -39,7 +39,7 @@
         </div>
 
 
-        <script src="scripts/bacterial-battle.js"></script>
+        <script src="script/bacterial-battle.js"></script>
 
     </body>
 </html>
