--- a/application/index.html
+++ b/application/index.html
@@ -39,7 +39,7 @@
         </div>
 
 
-        <!-- build:js scripts/bacterial-battle.js -->
+        <!-- build:js script/bacterial-battle.js -->
         <script type="text/javascript" src="scripts/vendor/jquery.1.8.2.js"></script>
         <script type="text/javascript" src="scripts/vendor/raphael.2.1.0.js"></script>
         <script type="text/javascript" src="scripts/vendor/lodash.0.7.0.js"></script>
