--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
         <link href="css/bootstrap.css" rel="stylesheet">
     </head>
     <body>
+    <a href="https://github.com/you"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <div class="container">
             <div class="well">
                 <h1>Bacterial Battle</h1>
-
+            </div>
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <a class="brand" href="docs">Documentation</a>
+                    <ul class="nav">
+                        <li><a href="docs/models.html">Models</a></li>
+                        <li><a href="docs/views.html">Views</a></li>
+                        <li><a href="docs/mediator.html">Mediator</a></li>
+                        <li><a href="docs/config.html">Config</a></li>
+                        <li><a href="docs/main.html">Main</a></li>
+                    </ul>
+                </div>
             </div>
             <div id="medium"></div>
             <div class="well">
@@ -37,7 +49,6 @@
 
             </footer>
         </div>
-
 
         <script src="script/bacterial-battle.js"></script>
 
