--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="css/bootstrap.css" rel="stylesheet">
     </head>
     <body>
-    <a href="https://github.com/you"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/pajtai/Bacterial-Battle.git"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <div class="container">
             <div class="well">
                 <h1>Bacterial Battle</h1>
