removed link that wasn't working

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <div class="navbar">
                 <div class="navbar-inner">
-                    <a class="brand" href="docs">Documentation</a>
+                    <a class="brand">Documentation</a>
                     <ul class="nav">
                         <li><a href="docs/models.html">Models</a></li>
                         <li><a href="docs/views.html">Views</a></li>
