--- a/application/index.html
+++ b/application/index.html
@@ -1,15 +1,27 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Bacterial Battle</title>
-        <link href="css/bootstrap.css" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Bacterial Battle</title>
+    <link href="css/bootstrap.css" rel="stylesheet">
+</head>
     <body>
+        <a href="https://github.com/pajtai/Bacterial-Battle.git"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <div class="container">
             <div class="well">
                 <h1>Bacterial Battle</h1>
-
+            </div>
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <a class="brand">Documentation</a>
+                    <ul class="nav">
+                        <li><a href="docs/models.html">Models</a></li>
+                        <li><a href="docs/views.html">Views</a></li>
+                        <li><a href="docs/mediator.html">Mediator</a></li>
+                        <li><a href="docs/config.html">Config</a></li>
+                        <li><a href="docs/main.html">Main</a></li>
+                    </ul>
+                </div>
             </div>
             <div id="medium"></div>
             <div class="well">
@@ -38,7 +50,6 @@
             </footer>
         </div>
 
-
         <!-- build:js script/bacterial-battle.js -->
         <script type="text/javascript" src="scripts/vendor/jquery.1.8.2.js"></script>
         <script type="text/javascript" src="scripts/vendor/raphael.2.1.0.js"></script>
@@ -55,3 +66,5 @@
 
     </body>
 </html>
+
+
