--- a/application/index.html
+++ b/application/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Bacterial Battle</title>
+    <!-- build:css css/bootstrap.min.css -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <!-- endbuild -->
 </head>
     <body>
         <a href="https://github.com/pajtai/Bacterial-Battle.git"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
