--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Bacterial Battle</title>
-        <link href="css/bootstrap.css" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Bacterial Battle</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+</head>
     <body>
-    <a href="https://github.com/pajtai/Bacterial-Battle.git"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/pajtai/Bacterial-Battle.git"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <div class="container">
             <div class="well">
                 <h1>Bacterial Battle</h1>
@@ -54,3 +54,5 @@
 
     </body>
 </html>
+
+
