--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
                 </div>
             </div>
             <div id="medium"></div>
-            <div class="well">
-                <div id="info"></div>
-            </div>
+
+                <div id="info">
+                    <div class="well row">
+                        <div class="span12">
+                            Click on a bacterium for more info
+                        </div>
+                    </div>
+                </div>
+
 
             <footer class="credit row">
                 <div class="span2">
