adding requirejs support

--- a/application/index.html
+++ b/application/index.html
@@ -6,6 +6,8 @@
     <!-- build:css css/bootstrap.min.css -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- endbuild -->
+    <script data-main="scripts/javascript/main.js" src="scripts/vendor/require-jquery.js"></script>
+
 </head>
     <body>
         <a href="https://github.com/pajtai/Bacterial-Battle.git"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
@@ -57,20 +59,6 @@
 
             </footer>
         </div>
-
-        <!-- build:js script/bacterial-battle.js -->
-        <script type="text/javascript" src="scripts/vendor/jquery.1.8.2.js"></script>
-        <script type="text/javascript" src="scripts/vendor/raphael.2.1.0.js"></script>
-        <script type="text/javascript" src="scripts/vendor/lodash.0.7.0.js"></script>
-        <script type="text/javascript" src="scripts/vendor/backbone.0.9.2.js"></script>
-
-        <script type="text/javascript" src="scripts/javascript/config.js"></script>
-        <script type="text/javascript" src="scripts/javascript/mediator/mediator.js"></script>
-        <script type="text/javascript" src="scripts/javascript/model/models.js"></script>
-        <script type="text/javascript" src="scripts/javascript/view/views.js"></script>
-
-        <script type="text/javascript" src="scripts/javascript/main.js"></script>
-        <!-- endbuild -->
 
     </body>
 </html>
