finishing up require js optimization settings

--- a/targets/live/index.html
+++ b/targets/live/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Bacterial Battle</title>
-    <!-- build:css css/bootstrap.min.css -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- endbuild -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script data-main="scripts/javascript/main.js" src="scripts/vendor/require-jquery.js"></script>
 
 </head>
