--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Bacterial Battle</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script data-main="scripts/javascript/main.js" src="scripts/vendor/require-jquery.js"></script>
+
 </head>
     <body>
         <a href="https://github.com/pajtai/Bacterial-Battle.git"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
@@ -11,39 +13,34 @@
             <div class="well">
                 <h1>Bacterial Battle</h1>
             </div>
-            <div class="navbar">
-                <div class="navbar-inner">
-                    <a class="brand">Documentation</a>
-                    <ul class="nav">
-                        <li><a href="docs/models.html">Models</a></li>
-                        <li><a href="docs/views.html">Views</a></li>
-                        <li><a href="docs/mediator.html">Mediator</a></li>
-                        <li><a href="docs/config.html">Config</a></li>
-                        <li><a href="docs/main.html">Main</a></li>
-                    </ul>
-                </div>
-            </div>
+
             <div id="medium"></div>
 
-                <div id="info">
-                    <div class="well row">
-                        <div class="span12">
-                            Click on a bacterium for more info
-                        </div>
+            <div id="info">
+                <div class="well row">
+                    <div class="span12">
+                        Click on a bacterium for more info
                     </div>
                 </div>
+            </div>
 
 
-            <footer class="credit row">
+            <footer class="credit">
+                <div class="row">
                 <div class="span2">
                     <a href="https://github.com/pajtai/bacterial-battle">Bacterial Battle</a>
                 </div>
-                <div class="span10">
+                <div class="span2">
                     <a href="https://github.com/pajtai/">
-                        <img width="25" height="25" alt="Peter Ajtai" src="https://secure.gravatar.com/avatar/ac74a00c500add86f36e2b3ed2900805?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
+                        <img width="25" height="25" alt="Peter Ajtai" src="https://secure.gravatar.com/avatar/ac74a00c500add86f36e2b3ed2900805?s=25">
                         Peter Ajtai
                     </a>
                 </div>
+                <div class="span8">
+                    <a href="docs/main.html">Code Documentation</a>
+                </div>
+                </div>
+                <div class="row">
                 <div class="span2">
                     <a href="https://github.com/pajtai/">&copy 2012 </a>
                 </div>
@@ -52,11 +49,10 @@
                         MIT License
                     </a>
                 </div>
+                </div>
 
             </footer>
         </div>
-
-        <script src="script/bacterial-battle.js"></script>
 
     </body>
 </html>
