--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </div>
                 <div class="span8">
-                    <a href="docs/main.html">Code Documentation</a>
+                    <a href="docs/main.html">Code Documentation - v0.0.2</a>
                 </div>
                 </div>
                 <div class="row">
